--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
             <div class="px-[5%]  bg-gray-100 ">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl  font-medium  text-center md:mt-10" id="portfolio ">Some of Our Work That
+                        <h2 class="md:text-3xl text-2xl  font-medium  text-center mt-10 pt-10" id="portfolio ">Some of Our Work That
                             Excelled at the Exhibitions</h2>
                         <p class="text-center pt-5 pb-5">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
