done footer fix postion

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -681,7 +681,7 @@
 
 
     <!-- Footer -->
-    <footer class="bg-[#000A93] px-[5%] text-white ">
+    <footer class=" footer bg-[#000A93] px-[5%] text-white ">
         <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
             <div class="col-span-3 flex flex-col gap-3">
                 <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
