--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
     <!-- /main content area-->
 
     <!-- Footer -->
-    <footer class="bg-[#000A93] px-[5%] text-white ">
+    <footer class=" bg-[#000A93] px-[5%] text-white ">
         <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
             <div class="col-span-3 flex flex-col gap-3">
                 <img src="assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
@@ -1132,12 +1132,14 @@
                 </div>
             </div>
         </div>
+       
     </footer>
-
-    <div class="bg-black text-center py-3">
+    <div class="bg-black text-center py-3 w-full">
         <p class="text-gray-400">Copyright © 2024 Stand Constructions by <a href="https://digitalfyx.com/"
                 class="text-white text-bold">Digitalfyx</a>. All Rights Reserved.</p>
     </div>
+
+  
     <!-- /Footer-->
     <!-- Modal Structure -->
     <div id="customModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden" style="z-index: 1000;">
