--- a/stand-design-and-booth-construction-company/hannover/index.html
+++ b/stand-design-and-booth-construction-company/hannover/index.html
@@ -207,7 +207,7 @@
                         <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Hannover
                         </span>
                     </div>
-                    <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
+                    <div class="md:flex  grid md:justify-center  text-center md:gap-4 md:pb-36 pb-5">
 
                         <a href="https://www.standconstructions.com/#portfolio"
                             class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
