i complete all changes like white space issues

--- a/stand-design-and-booth-construction-company/berlin/index.html
+++ b/stand-design-and-booth-construction-company/berlin/index.html
@@ -57,8 +57,8 @@
 
         <section>
             <div class="wrap-1">
-                   <!-- header -->
-                   <header id="header">
+                 <!-- header -->
+                 <header id="header">
                     <div class="flex justify-around">
                         <input type="checkbox" name="check" id="check">
                         <div class="flex items-center">
@@ -198,28 +198,33 @@
                     </div>
                 </header>
                 <!-- /header -->
+                 <br>
+                 <br>
+                 <br>
                 <div class="px-[3%]">
                     <div class="text-center md:p-20">
-                        <h1 class="text-2xl md:text-xl text-center md:pt-10 pt-32 text-white  mb-5">
+                        <h1 class="md:text-6xl text-2xl text-center pt-10 text-white  mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES BERLIN
                         </h1>
-                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Berlin
+                        <span class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder, Contractor in Berlin
                         </span>
+                        <br>
+                        <br>
+                        <div class="md:flex grid md:justify-center  text-center md:gap-4 md:pb-10 pt-10 pb-5">
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR QUOTATION
+                            </a>
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR FREE DESIGN
+                            </a>
+
+
+                        </div>
+
                     </div>
-                    
-                    <div class="md:flex grid  md:justify-center  text-center md:gap-4 md:pb-36 pb-5">
 
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR QUOTATION
-                        </a>
-
-
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR FREE DESIGN
-                        </a>
-                    </div>
 
                 </div>
             </div>
@@ -289,14 +294,15 @@
 
             </div>
         </section>
+        <br>
+        <br>
 
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-30">
+                    <div class="text-center md:p-5 ">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 pb-5">
-                            Stand Constructions is a full-service exhibition stand design company in Berlin.
+                        <h2 class="md:text-4xl  text-2xl  text-gray-600  md:pb-10 pb-5">Stand Constructions is a full-service exhibition stand design company in Berlin.
                         </h2>
                     </div>
                     <div class="grid md:grid-cols-2 gap-6  md:pl-10">
@@ -304,7 +310,7 @@
 
                         <div class="content_para ">
 
-                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3 bg-slate-100">Stand
+                            <p class=" border border-lightgray-400 rounded-3xl p-10 mb-3 bg-slate-100">
                                 Stand Constructions is a trusted exhibition stand design company in Berlin. We offer a
                                 total solution for all your exhibition needs, including the design and supply of
                                 exhibition stands. Stand Constructions is one of the best exhibitions stand builders
@@ -405,7 +411,7 @@
 
         <section  id="portfolio">
             <div class="px-[5%] text-center p-5 bg-gray-100 ">
-                <h3 class="md:text-4xl text-2xl  mt-10 ">Some of Our Work That Excelled at the Exhibitions</h3>
+                <h2 class="md:text-4xl text-2xl  mt-10 ">Some of Our Work That Excelled at the Exhibitions</h2>
 
                 <br />
                 <br />
