--- a/blogs/exhibition-stand-builder-in-berlin/index.html
+++ b/blogs/exhibition-stand-builder-in-berlin/index.html
@@ -360,21 +360,23 @@
 
        <!--/feature image and title of blog -->
     </main>
-  <!-- Footer -->
-  <footer class="bg-[#000A93] px-[5%] text-white ">
+ <!-- Footer -->
+ <footer class=" bg-[#000A93] px-[5%] text-white ">
     <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
-        <div class="col-span-3 flex flex-col gap-3">
+        <div class="col-span-3 flex flex-col gap-6">
             <img src="/assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
-            <div>
+            <div class="pb:10">
                 <span class="text-sm">
-                    Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions, custom and unique stands are created by our talented graphic designers,
+                    Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with
+                    equipment and products from Germany, UK, Netherlands, Italy and Spain. At Stand Constructions,
+                    custom and unique stands are created by our talented graphic designers,
                     who carry your brand to world standards with years of knowledge and experience.
                 </span>
             </div>
         </div>
         <div class="col-span-2">
-            <h4 class="text-2xl font-bold mb-2">Quick Links</h4>
-            <ul class="flex flex-col list-none gap-1">
+            <span class="text-2xl font-bold mb-5 grid gap-4">Quick Links</span>
+            <ul class="flex flex-col list-none gap-1 mb:10">
                 <li><a href="https://www.standconstructions.com/">Home</a></li>
                 <li><a href="https://www.standconstructions.com/about-us/">About Us</a></li>
                 <li><a href="https://www.standconstructions.com/#process">Process</a></li>
@@ -385,7 +387,7 @@
         </div>
         <div class="col-span-2">
             <div>
-                <h4 class="text-2xl font-bold mb-2">Our Services</h4>
+                <span class="text-2xl font-bold mb-5 grid gap-4">Our Services</span>
                 <ul class="flex flex-col gap-2 list-none">
                     <li><a href="#">Custom Exhibitoin Stand</a></li>
                     <li><a href="#">Modular Exhibition Stand</a></li>
@@ -396,19 +398,24 @@
         </div>
         <div class="col-span-2">
             <div>
-                <h4 class="text-2xl font-bold mb-2">Major Countries</h4>
+                <span class="text-2xl font-bold mb-5 grid gap-4">Major Countries</span>
                 <ul class="flex flex-col gap-2 list-none">
-                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/germany/">Stand Builder In Germany</a></li>
-                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/uk/">Stand Builder In UK</a></li>
-                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/spain/">Stand Builder In Spain</a></li>
-                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/netherlands/">Stand Builder In Netherlands</a></li>
-                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/italy/">Stand Builder In Italy</a></li>
+                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/germany/">Stand Builder
+                            In Germany</a></li>
+                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/uk/">Stand Builder In
+                            UK</a></li>
+                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/spain/">Stand Builder
+                            In Spain</a></li>
+                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/netherlands/">Stand
+                            Builder In Netherlands</a></li>
+                    <li><a href="https://www.standconstructions.com/exhibition-stand-builder/italy/">Stand Builder
+                            In Italy</a></li>
                 </ul>
             </div>
         </div>
         <div class="col-span-3">
             <div>
-                <h4 class="text-2xl font-bold mb-2">Reach Us</h4>
+                <span class="text-2xl font-bold mb-5 grid gap-4">Reach Us</span>
                 <div class="flex flex-col gap-4">
                     <div class="flex gap-x-3">
                         <div class="pt-2">
@@ -441,14 +448,15 @@
             </div>
         </div>
     </div>
+
 </footer>
+
 
 <div class="bg-black text-center py-3">
     <p class="text-gray-400">Copyright © 2024 Stand Constructions by <a href="https://digitalfyx.com/"
             class="text-white text-bold">Digitalfyx</a>. All Rights Reserved.</p>
 </div>
 <!-- /Footer-->
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="../../assets/js/script.js"></script>
 </body>
