--- a/exhibition-stand-builder/italy/index.html
+++ b/exhibition-stand-builder/italy/index.html
@@ -139,8 +139,9 @@
 
     <main>
 
+         
         <section>
-            <div class="wrap-1 bg-fixed">
+            <div class="wrap-1">
                  <!-- header -->
                  <header id="header">
                     <div class="flex justify-around">
@@ -289,24 +290,23 @@
                     <div class="text-center md:p-20">
                         <h1 class="md:text-6xl text-2xl text-center pt-10 text-white  mb-5">
                             EXHIBITION STAND BUILDER IN ITALY
-
                         </h1>
-                        <span class="text-white md:stext-xl text-lg mb-8">Exhibition Stand Designer, Builder & Contractor in Italy
+                        <span class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder & Contractor in Italy
+
                         </span>
                         <br>
                         <br>
-                        <div class="md:flex  block md:justify-center  text-center gap-4 md:pb-36 pb-5">
-                           
+                        <div class="md:flex grid md:justify-center  text-center md:gap-4 md:pb-10 pt-10 pb-5">
                             <a href="https://www.standconstructions.com/#portfolio"
                                 class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
                                 FOR QUOTATION
                             </a>
-
-
                             <a href="https://www.standconstructions.com/#portfolio"
                                 class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
                                 FOR FREE DESIGN
                             </a>
+
+
                         </div>
 
                     </div>
@@ -381,13 +381,13 @@
             </div>
         </section>
         <br>
+        <br>
         <section>
             <div class="wrap-3 ">
                 <div class="px-[3%]">
-                    <div class="text-center md:mt-20">
+                    <div class="text-center md:p-5 ">
 
-                        <h2 class="md:text-4xl text-2xl  text-gray-600 md:mt-20 pb-10 ">
-                            Looking for a reliable exhibition stand design company in Italy
+                        <h2 class="md:text-4xl  text-2xl  text-gray-600  md:pb-10 pb-5">Looking for a reliable exhibition stand design company in Italy
                         </h2>
                     </div>
                     <div class="md:grid md:grid-cols-2 gap-6  md:pl-10">
@@ -424,7 +424,7 @@
             <div class="px-[5%] my-5  bg-gray-100">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl text-[#0076F9] font-medium  text-center md:mt-10">Some of Our Work That
+                        <h2 class=" text-[#0076F9] font-medium  text-center mt-10">Some of Our Work That
                             Excelled at the Exhibitions</h2>
                         <p class="text-center pt-5 pb-10">Stand Constructions is an <b>exhibition stand builder</b> that
                             enables your brand to tell its story with graphic designs that reflect your brand’s unique
