--- a/stand-design-and-booth-construction-company/cologne/index.html
+++ b/stand-design-and-booth-construction-company/cologne/index.html
@@ -54,11 +54,10 @@
 
     <main>
 
-
         <section>
             <div class="wrap-1">
-                <!-- header -->
-                <header id="header">
+                 <!-- header -->
+                 <header id="header">
                     <div class="flex justify-around">
                         <input type="checkbox" name="check" id="check">
                         <div class="flex items-center">
@@ -198,31 +197,33 @@
                     </div>
                 </header>
                 <!-- /header -->
-                <br>
-                <br>
-                <br>
+                 <br>
+                 <br>
+                 <br>
                 <div class="px-[3%]">
                     <div class="text-center md:p-20">
-                        <h1 class="text-2xl md:text-6xl text-center pt-10 text-white mb-5">
+                        <h1 class="md:text-6xl text-2xl text-center pt-10 text-white mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES COLOGNE
                         </h1>
-                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Cologne
+                        <span class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder, Contractor in Cologne
                         </span>
+                        <br>
+                        <br>
+                        <div class="md:flex grid md:justify-center  text-center md:gap-4 md:pb-10 pt-5 pb-5">
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR QUOTATION
+                            </a>
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR FREE DESIGN
+                            </a>
+
+
+                        </div>
+
                     </div>
-                    
-                    <div class="md:flex grid  md:justify-center  text-center md:gap-4 md:pb-36 pb-5">
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR QUOTATION
-                        </a>
 
-
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR FREE DESIGN
-                        </a>
-
-                    </div>
 
                 </div>
             </div>
@@ -292,14 +293,14 @@
 
             </div>
         </section>
-
+        <br>
+        <br>
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-28">
+                    <div class="text-center md:p-5 ">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 ">Stand Constructions is a full-service
-                            exhibition stand design company in Cologne.
+                        <h2 class="md:text-4xl  text-2xl  text-gray-600  md:pb-10 pb-5">Stand Constructions is a full-service exhibition stand design company in Cologne
                         </h2>
                     </div>
                     <div class="grid md:grid-cols-2 gap-6  md:pl-10">
