--- a/stand-design-and-booth-construction-company/hannover/index.html
+++ b/stand-design-and-booth-construction-company/hannover/index.html
@@ -53,6 +53,7 @@
 
     <main>
 
+       
         <section>
             <div class="wrap-1">
                  <!-- header -->
@@ -201,26 +202,28 @@
                  <br>
                 <div class="px-[3%]">
                     <div class="text-center md:p-20">
-                        <h1 class="text-2xl md:text-6xl text-center pt-10 text-white  mb-5">
+                        <h1 class="md:text-6xl text-2xl text-center pt-10 text-white mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES HANNOVER
                         </h1>
-                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in Hannover
+                        <span class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder, Contractor in Hannover
                         </span>
+                        <br>
+                        <br>
+                        <div class="md:flex grid md:justify-center  text-center md:gap-4 md:pb-10 pt-5 pb-5">
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR QUOTATION
+                            </a>
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR FREE DESIGN
+                            </a>
+
+
+                        </div>
+
                     </div>
-                    <div class="md:flex  grid md:justify-center  text-center md:gap-4 md:pb-36 pb-5">
 
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR QUOTATION
-                        </a>
-
-
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR FREE DESIGN
-                        </a>
-
-                    </div>
 
                 </div>
             </div>
@@ -290,13 +293,14 @@
 
             </div>
         </section>
+        <br>
+        <br>
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-28">
+                    <div class="text-center md:p-5 ">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 pb-10">Stand Constructions is a
-                            full-service exhibition stand design company in Hannover
+                        <h2 class="md:text-4xl  text-2xl  text-gray-600  md:pb-10 pb-5">Stand Constructions is a full-service exhibition stand design company in Hannover
                         </h2>
                     </div>
                     <div class="grid md:grid-cols-2 gap-6  md:pl-10">
@@ -415,16 +419,16 @@
         </section>
 
 
-        <section class="mb-10  bg-gray-100" id="portfolio ">
+        <section class="mb-5  bg-gray-100" id="portfolio ">
             <div class="px-[5%] text-center m-5 p-5 ">
                 <h2 class="md:text-4xl text-2xl mt-5">Some of Our Work That Excelled at the Exhibitions</h2>
 
                 <br />
                 <br />
                 <div class="grid md:grid-cols-3 gap-2 md:mx-10">
-                    <div class="overflow-hidden  hover:bg-sky-700 boxes rounded-2xl p- bg-sky-700">
-                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-1" loading="lazy"
-                            class="transform hover:scale-125 transition-transform duration-1000 inset-box-shadow   "
+                    <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
+                        <img src="../../assets/images/portfolio/one.webp" alt="portfolio-img-2" loading="lazy"
+                            class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
                     <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
@@ -432,6 +436,7 @@
                             class="transform hover:scale-125 transition-transform duration-1000"
                             onclick="openCustomModal()" />
                     </div>
+                
                     <div class="overflow-hidden  hover:bg-sky-700  rounded-2xl p-5">
                         <img src="../../assets/images/portfolio/three.webp" alt="portfolio-img-3" loading="lazy"
                             class="transform hover:scale-125 transition-transform duration-1000"
@@ -525,8 +530,8 @@
                 <div class="px-[3%]">
                     <div class="text-center p-10 mt-5">
 
-                        <h3 class="text-4xl text-gray mt-4 pb-5">Popular Upcoming Exhibitions in Frankfurt
-                        </h3>
+                        <h2 class="text-4xl text-gray mt-4 pb-5">Popular Upcoming Exhibitions in Frankfurt
+                        </h2>
                         <p class="text-sm">You may be interested in showcasing at these upcoming exhibitions in
                             Frankfurt. </p>
                     </div>
