--- a/stand-design-and-booth-construction-company/stuttgart/index.html
+++ b/stand-design-and-booth-construction-company/stuttgart/index.html
@@ -56,8 +56,8 @@
 
         <section>
             <div class="wrap-1">
-                <!-- header -->
-                <header id="header">
+                 <!-- header -->
+                 <header id="header">
                     <div class="flex justify-around">
                         <input type="checkbox" name="check" id="check">
                         <div class="flex items-center">
@@ -202,27 +202,28 @@
                  <br>
                 <div class="px-[3%]">
                     <div class="text-center md:p-20">
-                        <h1 class="text-2xl md:text-6xl text-center pt-10 text-white  mb-5">
+                        <h1 class="md:text-6xl text-2xl text-center pt-10 text-white mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES STUTTGART
                         </h1>
-                        <span class="text-white text-xl mb-3">Exhibition Stand Designer, Builder, Contractor in
-                            Stuttgart
+                        <span class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder, Contractor in Stuttgart
                         </span>
+                        <br>
+                        <br>
+                        <div class="md:flex grid md:justify-center  text-center md:gap-4 md:pb-10 pt-5 pb-5">
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR QUOTATION
+                            </a>
+                            <a href="https://www.standconstructions.com/#portfolio"
+                                class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
+                                FOR FREE DESIGN
+                            </a>
+
+
+                        </div>
+
                     </div>
-                    <div class="md:flex  grid md:justify-center  text-center md:gap-4 md:pb-36 pb-5">
-                      
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR QUOTATION
-                        </a>
 
-
-                        <a href="https://www.standconstructions.com/#portfolio"
-                            class="px-6 py-3 text-white bg-[#0076F9] border border-[#0076F9] rounded-full hover:bg-white hover:text-[#0076F9] transition duration-700 ease-in-out mb-5">REQUEST
-                            FOR FREE DESIGN
-                        </a>
-
-                    </div>
 
                 </div>
             </div>
@@ -292,13 +293,14 @@
 
             </div>
         </section>
+        <br>
+        <br>
         <section>
             <div class="wrap-3">
                 <div class="px-[3%]">
-                    <div class="text-center md:p-10 md:mt-28">
+                    <div class="text-center md:p-5 ">
 
-                        <h2 class="md:text-4xl  text-2xl text-gray mt-4 md:pb-5 pb-10">
-                            Stand Constructions is a full-service exhibition stand design company in Stuttgart
+                        <h2 class="md:text-4xl  text-2xl  text-gray-600  md:pb-10 pb-5">Stand Constructions is a full-service exhibition stand design company in Stuttgart
                         </h2>
                     </div>
                     <div class="grid md:grid-cols-2 gap-6  md:pl-10">
@@ -527,8 +529,8 @@
                 <div class="px-[3%]">
                     <div class="text-center md:p-10 mt-5">
 
-                        <h3 class="md:text-4xl text-2xl text-gray mt-4 pb-5">Popular upcoming Exhibitions in Stuttgart
-                        </h3>
+                        <h2 class="md:text-4xl text-2xl text-gray mt-4 pb-5">Popular upcoming Exhibitions in Stuttgart
+                        </h2>
                         <p class="text-sm">You may be interested in showcasing these upcoming exhibitions in Stuttgart.</p>
                     </div>
                     <div class="md:grid grid-cols-6 gap-4">
