--- a/about-us/index.html
+++ b/about-us/index.html
@@ -7,9 +7,9 @@
     <link rel="icon" href="/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
-    <title>Exhibition Stand Designer, Builder &amp; Contractor in Germany</title>
+    <title>Exhibition Stand Design Builder in Europe</title>
     <meta name="description"
-        content="Stand Constructions is a leading exhibition stand design company in Germany that has been offering showcasing services to exhibitors across the globe for years." />
+        content="Stand Constructions is a leading exhibition stand builder in Europe. We have been in the industry for over 15 years and offer comprehensive exhibiting services and a variety of exhibition stands to exhibitors. You can have the best exhibiting experience with us!." />
     <link rel="canonical" href="https://www.standconstructions.com/about-us/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
