--- a/index.html
+++ b/index.html
@@ -1131,6 +1131,29 @@
 
     <div id="analytics-trigger" style="height: 1px; width: 1px;"></div>
 
+    <!-- counter -->
+
+    <!-- <div class="counters">
+        <div>
+            <div class="counter">
+                <h1><span data-count="156">0</span></h1>
+                <h3>project</h3>
+            </div>
+            <div class="counter">
+                <h1><span data-count="227">0</span></h1>
+                <h3>project</h3>
+            </div>
+            <div class="counter">
+                <h1><span data-count="91">0</span></h1>
+                <h3>project</h3>
+            </div>
+            <div class="counter">
+                <h1><span data-count="6">0</span></h1>
+                <h3>project</h3>
+            </div>
+        </div>
+    </div> -->
+
     <script>
         // Check if IntersectionObserver is supported
         if ('IntersectionObserver' in window) {
