--- a/stand-design-and-booth-construction-company/cologne/index.html
+++ b/stand-design-and-booth-construction-company/cologne/index.html
@@ -55,7 +55,7 @@
     <main>
 
         <section>
-            <div class="wrap-1">
+            <div class="cologne">
                  <!-- header -->
                  <header id="header">
                     <div class="flex justify-around">
