--- a/stand-design-and-booth-construction-company/dortmund/index.html
+++ b/stand-design-and-booth-construction-company/dortmund/index.html
@@ -51,7 +51,7 @@
     <main>
 
         <section>
-            <div class="wrap-1">
+            <div class="dortmund">
                  <!-- header -->
                  <header id="header">
                     <div class="flex justify-around">
