--- a/stand-design-and-booth-construction-company/hamburg/index.html
+++ b/stand-design-and-booth-construction-company/hamburg/index.html
@@ -54,7 +54,7 @@
 
     <main>
         <section>
-            <div class="wrap-1">
+            <div class="hamburg">
                 <!-- header -->
                 <header id="header">
                     <div class="flex justify-around">
