--- a/stand-design-and-booth-construction-company/munich/index.html
+++ b/stand-design-and-booth-construction-company/munich/index.html
@@ -56,7 +56,7 @@
 
    
         <section>
-            <div class="wrap-1">
+            <div class="munich">
                  <!-- header -->
                  <header id="header">
                     <div class="flex justify-around">
