--- a/stand-design-and-booth-construction-company/nuremberg/index.html
+++ b/stand-design-and-booth-construction-company/nuremberg/index.html
@@ -56,7 +56,7 @@
     <main>
 
       <section>
-            <div class="wrap-1">
+            <div class="nuremberg">
                  <!-- header -->
                  <header id="header">
                     <div class="flex justify-around">
