--- a/stand-design-and-booth-construction-company/dusseldorf/index.html
+++ b/stand-design-and-booth-construction-company/dusseldorf/index.html
@@ -54,7 +54,7 @@
     <main>
 
         <section>
-            <div class="wrap-1">
+            <div class="dusseldorf">
                    <!-- header -->
                    <header id="header">
                     <div class="flex justify-around">
