--- a/stand-design-and-booth-construction-company/hannover/index.html
+++ b/stand-design-and-booth-construction-company/hannover/index.html
@@ -55,7 +55,7 @@
 
        
         <section>
-            <div class="wrap-1">
+            <div class="hannover">
                  <!-- header -->
                  <header id="header">
                     <div class="flex justify-around">
