--- a/stand-design-and-booth-construction-company/stuttgart/index.html
+++ b/stand-design-and-booth-construction-company/stuttgart/index.html
@@ -55,7 +55,7 @@
     <main>
 
         <section>
-            <div class="wrap-1">
+            <div class="stuttgart">
                  <!-- header -->
                  <header id="header">
                     <div class="flex justify-around">
