--- a/about-us/index.html
+++ b/about-us/index.html
@@ -52,8 +52,8 @@
 
         <section>
             <div class="wrap-1">
-                 <!-- header -->
-                 <header id="header">
+                <!-- header -->
+                <header id="header">
                     <div class="flex justify-around">
                         <input type="checkbox" name="check" id="check">
                         <div class="flex items-center">
@@ -193,9 +193,9 @@
                     </div>
                 </header>
                 <!-- /header -->
-                 <br>
-                 <br>
-                 <br>
+                <br>
+                <br>
+                <br>
                 <div class="px-[3%]">
                     <div class="text-center md:p-20">
                         <h1 class="md:text-6xl text-2xl text-center pt-10 text-white  mb-5">
@@ -290,7 +290,7 @@
 
             </div>
         </section>
-        <section >
+        <section>
             <div class="about_page ">
                 <div class="px-[3%]">
                     <div class="text-center md:mt-40 ">
@@ -356,7 +356,7 @@
             </div>
         </section>
         <br>
-       
+
         <section>
             <div class="about_ussection">
                 <div class="px-[5%] py-6">
@@ -405,7 +405,8 @@
         </section>
         <section class="mb-10" id="portfolio">
             <div class="px-[5%] text-center p-5 bg-gray-100 ">
-                <h2 class="md:text-4xl text-2xl text-gray-600 font-semibold mt-4 md:pb-5 pb-5 capitalize">Some Of Our Work That Excelled At The Exhibitions
+                <h2 class="md:text-4xl text-2xl text-gray-600 font-semibold mt-4 md:pb-5 pb-5 capitalize">Some Of Our
+                    Work That Excelled At The Exhibitions
                 </h2>
 
                 <br />
@@ -446,59 +447,43 @@
             </div>
         </section>
 
-        <section>
-            <div class="counterrs py-16">
+  <!-- counter -->
 
-                <span class="md:text-3xl text-xl  text-center block  text-white/90 mb-10 ">Numbers That Speak
-                    For Our
-                    success</span>
+  <section class="mains" id="mains">
+    <div class="counterrs py-10">
+        <span class="md:text-3xl text-xl  text-center block  text-white/90 mb-10 ">Numbers That Speak
+            For Our
+            success</span>
 
-                <br />
-
-                <div class="px-[3%]">
-                    <div class="md:flex justify-center items-center">
-                        <div class="grid md:grid-cols-4 gap-5">
-                            <div class="four col-md-3 counterblur ">
-                                <div class="counter-box rounded-2xl colored block md:p-10 text-center">
-                                    <i
-                                        class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-                                    <span class="counter text-white block text-3xl leading-5 my-3">1000
-                                        <sup>+</sup></span>
-                                    <span class="text-lg text-white mb-2">Projects Across Europe</span>
-                                </div>
-                            </div>
-                            <div class="four col-md-3 counterblur ">
-                                <div class="counter-box block p-10 text-center">
-                                    <i
-                                        class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-                                    <span class="counter  text-white block text-3xl leading-5 my-3">14650+</span>
-                                    <sapn class="text-lg text-white">Happy Clients</span>
-                                </div>
-                            </div>
-                            <div class="four col-md-3 counterblur  ">
-                                <div class="counter-box block p-10 text-center">
-                                    <i
-                                        class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-                                    <span class="counter  text-white block text-3xl leading-5 my-3">
-                                        1121+
-                                    </span>
-                                    <span class="text-lg text-white">Trade Shows in Europe</span>
-                                </div>
-                            </div>
-                            <div class="four col-md-3 counterblur ">
-                                <div class="counter-box block p-10 text-center">
-                                    <i
-                                        class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
-                                    <span class="counter  text-white block text-3xl leading-5 my-3">15</span>
-                                    <sapn class="text-lg text-white">Years in Industry</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+        <br />
+        <div class="container flex justify-center m-10 gap-4">
+            <div class="count-heading counterblur p-10  text-center">
+                <i class="fa-solid fa-earth-europe text-4xl m-4 text-white bg-blue-500 p-5 rounded-full "></i>
+                <div class="count   text-white text-2xl" max-data="1000">1</div>
+                <span class="text-lg text-white mb-2">Projects Across Europe</span>
             </div>
-        </section>
+            <div class="count-heading counterblur p-10  text-center">
+                <i class="fa-solid fa-user-tie  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
+                <div class="count   text-white  text-2xl" max-data="14650">1</div>
+                <span class="text-lg text-white mb-2">Happy Clients</span>
+            </div>
+            <div class="count-heading counterblur p-10  text-center">
+                <i class="fa-brands fa-playstation  text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
+                <div class="count text-white  text-2xl" max-data="1121">1</div>
+                <span class="text-lg text-white mb-2">Trade Shows in Europe
+
+                </span>
+            </div>
+            <div class="count-heading counterblur p-10  text-center">
+                <i class="fa-solid fa-object-group text-4xl  m-4 text-white bg-blue-500 p-5 rounded-full"></i>
+                <div class="count  text-white  text-2xl" max-data="15">1</div>
+                <span class="text-lg text-white mb-2">Years in Industry</span>
+            </div>
+        </div>
+    </div>
+
+
+</section>
 
 
         <section>
@@ -662,7 +647,7 @@
         </section>
 
 
-         
+
 
     </main>
 
@@ -764,6 +749,8 @@
     </div>
     <!-- /Footer-->
 
+
+   
     <!-- Modal Structure -->
     <div id="customModal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center hidden"
         style="z-index: 1000;">
@@ -808,6 +795,7 @@
     </div>
 
     <script src="../assets/js/script.js"></script>
+ 
 
 </body>
 
