--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
     <main>
         <!-- hero section -->
         <section class="hero-section pt-24 pb-32">
-             <!-- header -->
-             <header id="header">
+            <!-- header -->
+            <header id="header">
                 <div class="flex justify-around">
                     <input type="checkbox" name="check" id="check">
                     <div class="flex items-center">
                         <a href="https://www.standconstructions.com">
-                            <img src="/assets/images/logos/header-logo.webp" alt="standconstructions-logi"
-                                class="h-12" loading="eager">
+                            <img src="/assets/images/logos/header-logo.webp" alt="standconstructions-logi" class="h-12"
+                                loading="eager" width="200" height="100">
                         </a>
                     </div>
                     <div class="nav-btn">
@@ -273,9 +273,9 @@
                 </div>
             </header>
             <!-- /header -->
-             <br>
-             <br>
-             <br>
+            <br>
+            <br>
+            <br>
 
             <div class="md:flex justify-center items-center">
                 <div class="flex flex-col gap-5 items-center text-center mt-16 mb-10">
@@ -308,46 +308,53 @@
                                         feel happy and satisfied. For us, satisfaction comes from customer success.
                                         Stand Constructions make work more efficient and more accessible. Stand
                                         Constructions
-                                        also ensure their work is completed on time without compromising quality.</p>
-                                    <br />
-                                    <p class="text-gray-500">We are an <b>exhibition stand builder</b>, ensuring
+                                        also ensure their work is completed on time without compromising quality.
+                                        <br />
+                                        <br>
+                                        We are an <b>exhibition stand builder</b>, ensuring
                                         everything from design to final delivery goes smoothly and efficiently. We have
                                         a large storage area suitable for all purposes. Stand Constructions is a reputed
                                         name
                                         for <b>exhibition
                                             stand
                                             design</b> that offers clients high-quality, creative & competitive stand
-                                        design & build services, ensuring a stress-free experience.</p>
-                                    <br />
-                                    <p class="text-gray-500">With our wings spread across Europe, we help our clients
+                                        design & build services, ensuring a stress-free experience.
+                                        <br />
+                                        <br>
+                                        With our wings spread across Europe, we help our clients
                                         build and host custom-built stands that meet branding requirements and create a
                                         unique stand design methodology. We believe that <b>exhibition stand design and
                                             building</b> is not just a job but an art, a craft that requires high
                                         creativity. Here’s what you want to hear! Stand Constructions has completed
                                         ample exhibition stand design, & building projects with high customer
                                         satisfaction
-                                        in Europe.</p>
-                                    <br />
-                                    <p class="text-gray-500">We at Stand Constructions give our clients a hassle-free
+                                        in Europe.
+                                        <br />
+                                        <br>
+                                        We at Stand Constructions give our clients a hassle-free
                                         experience, and our team of experts is available to help you at every step with
                                         detailed explanations. Stand Constructions design, build, set up & manage
                                         exhibition
                                         stands.
                                     </p>
+
+
                                 </div>
                             </div>
                             <div class="col-span-2">
                                 <div class="bg-blue-100 rounded-2xl m-5 md:relative h-96">
                                     <img src="../assets/images/exhibition_images/exhibition-2.jpg" alt="about_image"
                                         loading="lazy"
-                                        class="w-full border border-blue-400 p-5 rounded-2xl  bg-slate-50  md:absolute top-5  mb-5">
+                                        class="w-full border border-blue-400 p-5 rounded-2xl  bg-slate-50  md:absolute top-5  mb-5"
+                                        width="200" height="200">
                                     <img src="../assets/images/exhibition_images/exhibition-3.jpg" alt="about_image"
                                         loading="lazy"
-                                        class="md:absolute bg-slate-50 border rounded-2xl border-blue-400 p-5 top-[1rem] left-52 mb-5 md:w-60 w-full    ">
+                                        class="md:absolute bg-slate-50 border rounded-2xl border-blue-400 p-5 top-[1rem] left-52 mb-5 md:w-60 w-full    "
+                                        width="200" height="200">
                                     <br>
                                     <img src="../assets/images/exhibition_images/exhibition-3.jpg" alt="about_image"
                                         loading="lazy" class="md:absolute bg-slate-50 border rounded-2xl border-blue-400 p-5 
-                                        top-[17rem] left-1 mb-5 md:w-60 w-full    ">
+                                        top-[17rem] left-1 mb-5 md:w-60 w-full    " width="200" height="200">
                                 </div>
 
                             </div>
@@ -921,7 +928,8 @@
                         <span class="circle two"></span>
 
                         <form action="index.html" autocomplete="off" id="contactForm">
-                            <span class="text-white text-xl md:text-2xl text-center block md:my-3">Send Us a Message</span>
+                            <span class="text-white text-xl md:text-2xl text-center block md:my-3">Send Us a
+                                Message</span>
 
                             <div class="md:grid grid-cols-2 md:gap-4 ">
                                 <div class="input-container ">
@@ -992,7 +1000,8 @@
     <footer class=" bg-[#000A93] px-[5%] text-white ">
         <div class="grid md:grid-cols-12 mt-5 py-10 gap-5">
             <div class="col-span-3 flex flex-col gap-6">
-                <img src="assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy" />
+                <img src="assets/images/logos/footer-logo.webp" class="w-40" alt="footer-logo" loading="lazy"
+                    width="200" height="100" />
                 <div class="pb:10">
                     <span class="text-sm">
                         Stand Constructions is one of the most well-known exhibitions stand builders in Europe, with
