--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                                     </div>
                                 </li>
                                 <li class="nav-link" style="--i: 1.35s">
-                                    <a href="https://www.standconstructions.com/#process">Process</a>
+                                    <a href="#process">Process</a>
                                 </li>
                                 <li class="nav-link" style="--i: 1.35s">
-                                    <a href="https://www.standconstructions.com/#portfolio">Portfolio</a>
+                                    <a href="#portfolio">Portfolio</a>
                                 </li>
                                 <li class="nav-link" style="--i: 1.35s">
                                     <a href="https://www.standconstructions.com/blogs/">Blogs</a>
@@ -791,11 +791,11 @@
 
                 </div>
         </section>
-        <section>
-            <div class="px-[5%]  bg-gray-100 ">
+        <section >
+            <div class="px-[5%]   bg-gray-100 "  id="portfolio">
                 <div class="md:grid grid-cols-6 gap-4">
                     <div class="col-start-2 col-span-4 ...">
-                        <h2 class="md:text-3xl text-2xl  font-medium  text-center mt-10 pt-5" id="portfolio ">Some of
+                        <h2 class="md:text-3xl text-2xl  font-medium  text-center mt-10 pt-5" >Some of
                             Our Work That
                             Excelled at the Exhibitions</h2>
                         <p class="text-center pt-5 pb-5">Stand Constructions is an <b>exhibition stand builder</b> that
