--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
 
 
@@ -248,10 +247,10 @@
                                     </div>
                                 </li>
                                 <li class="nav-link" style="--i: 1.35s">
-                                    <a href="#process">Process</a>
+                                    <a href="https://www.standconstructions.com/#process">Process</a>
                                 </li>
                                 <li class="nav-link" style="--i: 1.35s">
-                                    <a href="#portfolio">Portfolio</a>
+                                    <a href="https://www.standconstructions.com/#portfolio">Portfolio</a>
                                 </li>
                                 <li class="nav-link" style="--i: 1.35s">
                                     <a href="https://www.standconstructions.com/blogs/">Blogs</a>
