--- a/index.html
+++ b/index.html
@@ -874,9 +874,9 @@
                 </div>
             </div>
         </section>
-        <section id="contact  bg-white ">
+        <section class=" bg-white ">
 
-            <div class=" relative w-full  p-3 bg-white  flex justify-center">
+            <div class=" relative w-full  p-3 bg-white  flex justify-center" id="contact">
                 <span class="big-circle"></span>
                 <!-- <img src="assets/images/logos/header-logo.webp" class="square" alt="" /> -->
                 <div class="form">
