--- a/stand-design-and-booth-construction-company/hamburg/index.html
+++ b/stand-design-and-booth-construction-company/hamburg/index.html
@@ -204,7 +204,7 @@
                         <h1 class="md:text-6xl text-2xl text-center pt-10 text-white mb-5">
                             EXHIBITION STAND DESIGN & BOOTH CONSTRUCTION SERVICES HAMBURG
                         </h1>
-                        <span class="text-white md:text-xl mb-8">hibition Stand Designer, Builder, Contractor in Hamburg
+                        <span class="text-white md:text-xl mb-8">Exhibition Stand Designer, Builder, Contractor in Hamburg
                         </span>
                         <br>
                         <br>
