fix 404 images issue

--- a/exhibition-stand-builder/germany/index.html
+++ b/exhibition-stand-builder/germany/index.html
@@ -466,7 +466,7 @@
                     <div class="md:grid grid-cols-5 relative justify-center  md:px-10 p-5 pb-10">
 
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/berlin-min.jpg" alt="berlin_images"
+                            <img src="../../assets/images/cities_images/berlin-min.webp" alt="berlin_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -476,7 +476,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Berlin</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/cologne.jpg" alt="cologne_images"
+                            <img src="../../assets/images/cities_images/cologne.webp" alt="cologne_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -486,7 +486,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Cologne</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/dortmund.jpg" alt="dortmund_images"
+                            <img src="../../assets/images/cities_images/dortmund.webp" alt="dortmund_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -496,7 +496,7 @@
                             <span class="absolute top-[4rem] left-[5rem] text-white text-x">Dortmund</span>
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/dusseldorfmin.jpg" alt="dusseldorf_image"
+                            <img src="../../assets/images/cities_images/dusseldorfmin.webp" alt="dusseldorf_image"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -506,7 +506,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Dusseldorf</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/frankfurt-min.jpg" alt="frankfurt_image"
+                            <img src="../../assets/images/cities_images/frankfurt-min.webp" alt="frankfurt_image"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -516,7 +516,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Frankfurt</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/hamburg-min.jpg" alt="hamburg_images"
+                            <img src="../../assets/images/cities_images/hamburg-min.webp" alt="hamburg_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -526,7 +526,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Hamburg</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/hannover-min.jpg" alt="hannover_images"
+                            <img src="../../assets/images/cities_images/hannover-min.webp" alt="hannover_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -536,7 +536,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Hannover</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/munich-min.jpg" alt=" munich_images"
+                            <img src="../../assets/images/cities_images/munich-min.webp" alt=" munich_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -546,7 +546,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Munich</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/nuremberg-min.jpg" alt="nuremberg_images"
+                            <img src="../../assets/images/cities_images/nuremberg-min.webp" alt="nuremberg_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
@@ -556,7 +556,7 @@
                             <!-- <span class="absolute top-[4rem] left-[5rem] text-white text-x">Nuremberg</span> -->
                         </div>
                         <div class="img-box border rounded-3xl relative w-56 h-auto m-5">
-                            <img src="../../assets/images/cities_images/stuttgart-min.jpg" alt="stuttgart_images"
+                            <img src="../../assets/images/cities_images/stuttgart-min.webp" alt="stuttgart_images"
                                 class="rounded-3xl" loading="lazy">
 
                             <div class="cta">
