add meta robot tag

--- a/exhibition-stand-builder/italy/index.html
+++ b/exhibition-stand-builder/italy/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <title>Exhibition Stand Designer, Builder &amp; Contractor in Italy</title>
     <meta name="description" content="If you have any upcoming showcase and want the best exhibition stand design company in Italy, you&#039;re at the right place, i.e., Stand Constructions." />
     <link rel="canonical" href="https://www.standconstructions.com/exhibition-stand-builder/italy/" />
