--- a/stand-design-and-booth-construction-company/hannover/index.html
+++ b/stand-design-and-booth-construction-company/hannover/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <link rel="icon" href="/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
