set robot tag in cities and countries

--- a/exhibition-stand-builder/netherlands/index.html
+++ b/exhibition-stand-builder/netherlands/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <title>Exhibition Stand Designer, Builder &amp; Contractor in Netherlands</title>
     <meta name="description" content="Are you looking for an exhibition stand design company in the Netherlands? If yes, Stand Constructions should be on your priority list. We are an exhibition stand contractor company in the Netherlands that offers excellent showcasing services."
     />
