--- a/stand-design-and-booth-construction-company/dusseldorf/index.html
+++ b/stand-design-and-booth-construction-company/dusseldorf/index.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <link rel="icon" href="/assets/images/logos/fevicon-32x32.png" sizes="32x32" />
     <link rel="icon" href="/assets/images/logos/fevicon-192x192.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="/assets/images/logos/fevicon-192x192.png" />
-    <title>Exhibition Stand Designer, Builder &amp; Contractor in Dusseldorl</title>
+    <title>Exhibition Stand Designer, Builder &amp; Contractor in Dusseldorf</title>
     <meta name="description"
         content="Stand Constructions is an exhibition stand design company in Dusseldorf that has been serving exhibitors for years." />
     <link rel="canonical"
         href="https://www.standconstructions.com/stand-design-and-booth-construction-company/dusseldorf/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Exhibition Stand Designer, Builder &amp; Contractor in Dusseldorl" />
+    <meta property="og:title" content="Exhibition Stand Designer, Builder &amp; Contractor in Dusseldorf" />
     <meta property="og:description"
         content="Stand Constructions is an exhibition stand design company in Dusseldorf that has been serving exhibitors for years." />
     <meta property="og:url"
