--- a/exhibition-stand-builder/germany/index.html
+++ b/exhibition-stand-builder/germany/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
     <title>Exhibition Stand Designer, Builder &amp; Contractor in Germany</title>
     <meta name="description"
         content="Stand Constructions is a leading exhibition stand design company in Germany that has been offering showcasing services to exhibitors across the globe for years." />
